<resources>
    <string name="app_name">ShoppingList</string>
    <string name="app_name_label">Shopping list</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="add_item_text">Add item</string>
    <string name="enter_item">Enter item</string>
    <string name="hint_product_name">Product name</string>
    <string name="hint_quantity">Quantity</string>
    <string name="save_button_text">Save</string>
    <string name="delete_button_description">Delete button</string>
    <string name="quantity_text">quantity goes there</string>
    <string name="product_name_text">product name goes there</string>
    <string name="date_text">date goes there</string>
    <string name="warning_text">Are you sure you want to delete?</string>
    <string name="confirmation_no_text">NO</string>
    <string name="confirmation_yes_text">YES</string>
    <string name="edit_item_text">Edit item</string>
    <string name="dismiss_button_text">Dismiss</string>
</resources>