<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout_id"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="24dp">

            <TextView
                android:id="@+id/title"
                android:text="@string/enter_item"
                android:layout_centerHorizontal="true"
                android:textStyle="italic"
                android:textSize="18sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <EditText
                android:id="@+id/product_name_item"
                android:layout_below="@id/title"
                android:hint="@string/hint_product_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <EditText
                android:id="@+id/quantity_item"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/product_name_item"
                android:hint="@string/hint_quantity"
                android:inputType="number" />

            <Button
                android:id="@+id/save_button"
                android:layout_below="@+id/quantity_item"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:textSize="14sp"
                android:textStyle="bold"
                android:background="@color/colorAccent"
                android:textColor="@android:color/white"
                android:text="@string/save_button_text" />

        </RelativeLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>