<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="24dp" >

            <TextView
                android:id="@+id/edit_item_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/edit_item_text"
                android:layout_centerHorizontal="true"
                android:textStyle="bold|italic"
                android:textSize="18sp"/>

            <EditText
                android:id="@+id/edit_item_name_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/edit_item_text_view"
                android:inputType="text"
                android:hint="@string/hint_product_name" />

            <EditText
                android:id="@+id/edit_item_quantity_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/edit_item_name_edit_text"
                android:inputType="number"
                android:hint="@string/hint_quantity" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/edit_item_quantity_edit_text"
                android:layout_marginTop="20dp">

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/guid_line_left"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintGuide_percent=".15" />

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/guid_line_right"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintGuide_percent=".85" />

<!--                buttons are constrained vertically by ConstraintLayout-->
                <Button
                    android:id="@+id/edit_item_dismiss_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/colorAccent"
                    android:textColor="@android:color/white"
                    android:text="@string/dismiss_button_text"
                    app:layout_constraintLeft_toRightOf="@id/guid_line_left" />

                <Button
                    android:id="@+id/edit_item_save_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/colorAccent"
                    android:textColor="@android:color/white"
                    android:text="@string/save_button_text"
                    app:layout_constraintRight_toRightOf="@id/guid_line_right"/>


            </androidx.constraintlayout.widget.ConstraintLayout>

        </RelativeLayout>

    </androidx.cardview.widget.CardView>


</LinearLayout>