<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="23dp">

            <TextView
                android:id="@+id/text_alert"
                android:text="@string/warning_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:padding="6dp" />
            
            <Button
                android:id="@+id/confirmation_no_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/colorAccent"
                android:textColor="@android:color/white"
                android:layout_marginTop="19dp"
                android:layout_marginStart="50dp"
                android:text="@string/confirmation_no_text"
                android:layout_below="@+id/text_alert" />

            <Button
                android:id="@+id/confirmation_yes_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/colorAccent"
                android:textColor="@android:color/white"
                android:layout_marginTop="19dp"
                android:layout_marginEnd="50dp"
                android:text="@string/confirmation_yes_text"
                android:layout_alignParentEnd="true"
                android:layout_below="@+id/text_alert" />

        </RelativeLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>